frontend/src/app/conditions/generated/ConditionsParser.ts
// Generated from Conditions.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import ConditionsListener from "./ConditionsListener.js";
import ConditionsVisitor from "./ConditionsVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class ConditionsParser extends Parser {
	public static readonly DATE = 1;
	public static readonly IS = 2;
	public static readonly OF = 3;
	public static readonly ANY = 4;
	public static readonly ALL = 5;
	public static readonly AND = 6;
	public static readonly OR = 7;
	public static readonly NOT = 8;
	public static readonly TRUE = 9;
	public static readonly FALSE = 10;
	public static readonly POWER = 11;
	public static readonly MULTIPLICATION = 12;
	public static readonly DIVISION = 13;
	public static readonly PLUS = 14;
	public static readonly MINUS = 15;
	public static readonly GT = 16;
	public static readonly GE = 17;
	public static readonly LT = 18;
	public static readonly LE = 19;
	public static readonly EQ = 20;
	public static readonly NEQ = 21;
	public static readonly LPAREN = 22;
	public static readonly RPAREN = 23;
	public static readonly LARRAYPAREN = 24;
	public static readonly RARRAYPAREN = 25;
	public static readonly LLAMBDAPAREN = 26;
	public static readonly RLAMBDAPAREN = 27;
	public static readonly LAMBDAARROW = 28;
	public static readonly COLON = 29;
	public static readonly COMMA = 30;
	public static readonly DECIMAL = 31;
	public static readonly UNFINISHED_STRING = 32;
	public static readonly TEXT = 33;
	public static readonly IDENTIFIER = 34;
	public static readonly WS = 35;
	public static readonly ERROR_CHAR = 36;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_exp = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_number = 2;
	public static readonly RULE_date = 3;
	public static readonly RULE_string = 4;
	public static readonly RULE_equatable = 5;
	public static readonly RULE_equality = 6;
	public static readonly RULE_binary = 7;
	public static readonly RULE_comparable = 8;
	public static readonly RULE_iterator = 9;
	public static readonly RULE_comparator = 10;
	public static readonly RULE_array = 11;
	public static readonly RULE_arrayelements = 12;
	public static readonly RULE_textarrayelement = 13;
	public static readonly RULE_decimalarrayelement = 14;
	public static readonly RULE_identifier = 15;
	public static readonly RULE_bool = 16;
	public static readonly RULE_decimalConst = 17;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "'^'", 
                                                            "'*'", "'/'", 
                                                            "'+'", "'-'", 
                                                            "'>'", "'>='", 
                                                            "'<'", "'<='", 
                                                            "'='", "'!='", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'->'", "':'", 
                                                            "','" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "DATE", 
                                                             "IS", "OF", 
                                                             "ANY", "ALL", 
                                                             "AND", "OR", 
                                                             "NOT", "TRUE", 
                                                             "FALSE", "POWER", 
                                                             "MULTIPLICATION", 
                                                             "DIVISION", 
                                                             "PLUS", "MINUS", 
                                                             "GT", "GE", 
                                                             "LT", "LE", 
                                                             "EQ", "NEQ", 
                                                             "LPAREN", "RPAREN", 
                                                             "LARRAYPAREN", 
                                                             "RARRAYPAREN", 
                                                             "LLAMBDAPAREN", 
                                                             "RLAMBDAPAREN", 
                                                             "LAMBDAARROW", 
                                                             "COLON", "COMMA", 
                                                             "DECIMAL", 
                                                             "UNFINISHED_STRING", 
                                                             "TEXT", "IDENTIFIER", 
                                                             "WS", "ERROR_CHAR" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"exp", "expression", "number", "date", "string", "equatable", "equality", 
		"binary", "comparable", "iterator", "comparator", "array", "arrayelements", 
		"textarrayelement", "decimalarrayelement", "identifier", "bool", "decimalConst",
	];
	public get grammarFileName(): string { return "Conditions.g4"; }
	public get literalNames(): (string | null)[] { return ConditionsParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return ConditionsParser.symbolicNames; }
	public get ruleNames(): string[] { return ConditionsParser.ruleNames; }
	public get serializedATN(): number[] { return ConditionsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, ConditionsParser._ATN, ConditionsParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public exp(): ExpContext {
		let localctx: ExpContext = new ExpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, ConditionsParser.RULE_exp);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 36;
			this.expression(0);
			this.state = 37;
			this.match(ConditionsParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, _parentState);
		let _prevctx: ExpressionContext = localctx;
		let _startState: number = 2;
		this.enterRecursionRule(localctx, 2, ConditionsParser.RULE_expression, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 63;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				localctx = new BoolxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 40;
				this.bool();
				}
				break;
			case 2:
				{
				localctx = new ParenxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 41;
				this.match(ConditionsParser.LPAREN);
				this.state = 42;
				this.expression(0);
				this.state = 43;
				this.match(ConditionsParser.RPAREN);
				}
				break;
			case 3:
				{
				localctx = new NotxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 45;
				this.match(ConditionsParser.NOT);
				this.state = 46;
				this.expression(6);
				}
				break;
			case 4:
				{
				localctx = new EqualityxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 47;
				(localctx as EqualityxContext)._left = this.equatable();
				this.state = 48;
				(localctx as EqualityxContext)._op = this.equality();
				this.state = 49;
				(localctx as EqualityxContext)._right = this.equatable();
				}
				break;
			case 5:
				{
				localctx = new ComparatorxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 51;
				(localctx as ComparatorxContext)._left = this.comparable();
				this.state = 52;
				(localctx as ComparatorxContext)._op = this.comparator();
				this.state = 53;
				(localctx as ComparatorxContext)._right = this.comparable();
				}
				break;
			case 6:
				{
				localctx = new LambdaxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 55;
				this.equatable();
				this.state = 56;
				this.match(ConditionsParser.IS);
				this.state = 57;
				this.match(ConditionsParser.IDENTIFIER);
				this.state = 58;
				this.match(ConditionsParser.LAMBDAARROW);
				this.state = 59;
				this.match(ConditionsParser.LLAMBDAPAREN);
				this.state = 60;
				this.expression(0);
				this.state = 61;
				this.match(ConditionsParser.RLAMBDAPAREN);
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 75;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 73;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						localctx = new ExpressionsequalityxContext(this, new ExpressionContext(this, _parentctx, _parentState));
						(localctx as ExpressionsequalityxContext)._left = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ConditionsParser.RULE_expression);
						this.state = 65;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 66;
						(localctx as ExpressionsequalityxContext)._op = this.equality();
						this.state = 67;
						(localctx as ExpressionsequalityxContext)._right = this.expression(5);
						}
						break;
					case 2:
						{
						localctx = new BinaryxContext(this, new ExpressionContext(this, _parentctx, _parentState));
						(localctx as BinaryxContext)._left = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ConditionsParser.RULE_expression);
						this.state = 69;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 70;
						(localctx as BinaryxContext)._op = this.binary();
						this.state = 71;
						(localctx as BinaryxContext)._right = this.expression(3);
						}
						break;
					}
					}
				}
				this.state = 77;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public number_(): NumberContext;
	public number_(_p: number): NumberContext;
	// @RuleVersion(0)
	public number_(_p?: number): NumberContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: NumberContext = new NumberContext(this, this._ctx, _parentState);
		let _prevctx: NumberContext = localctx;
		let _startState: number = 4;
		this.enterRecursionRule(localctx, 4, ConditionsParser.RULE_number, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 22:
				{
				localctx = new ParensxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 79;
				this.match(ConditionsParser.LPAREN);
				this.state = 80;
				this.number_(0);
				this.state = 81;
				this.match(ConditionsParser.RPAREN);
				}
				break;
			case 15:
				{
				localctx = new NegationxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 83;
				this.match(ConditionsParser.MINUS);
				this.state = 84;
				this.number_(6);
				}
				break;
			case 4:
			case 5:
				{
				localctx = new NumberIteratorxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 85;
				this.iterator();
				}
				break;
			case 34:
				{
				localctx = new NumberIdentifierxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 86;
				this.identifier(0);
				}
				break;
			case 31:
				{
				localctx = new DecimalxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 87;
				this.match(ConditionsParser.DECIMAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 101;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 99;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
					case 1:
						{
						localctx = new PowerxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as PowerxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ConditionsParser.RULE_number);
						this.state = 90;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 91;
						this.match(ConditionsParser.POWER);
						this.state = 92;
						(localctx as PowerxContext)._b = this.number_(8);
						}
						break;
					case 2:
						{
						localctx = new MultiplicationxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as MultiplicationxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ConditionsParser.RULE_number);
						this.state = 93;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 94;
						(localctx as MultiplicationxContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===12 || _la===13)) {
						    (localctx as MultiplicationxContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 95;
						(localctx as MultiplicationxContext)._b = this.number_(6);
						}
						break;
					case 3:
						{
						localctx = new AdditionxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as AdditionxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ConditionsParser.RULE_number);
						this.state = 96;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 97;
						(localctx as AdditionxContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===14 || _la===15)) {
						    (localctx as AdditionxContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 98;
						(localctx as AdditionxContext)._b = this.number_(5);
						}
						break;
					}
					}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public date(): DateContext {
		let localctx: DateContext = new DateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, ConditionsParser.RULE_date);
		try {
			this.state = 116;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				localctx = new DateConstructorxContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 104;
				this.match(ConditionsParser.DATE);
				this.state = 105;
				this.match(ConditionsParser.LPAREN);
				this.state = 106;
				(localctx as DateConstructorxContext)._year = this.number_(0);
				this.state = 107;
				this.match(ConditionsParser.COMMA);
				this.state = 108;
				(localctx as DateConstructorxContext)._month = this.number_(0);
				this.state = 109;
				this.match(ConditionsParser.COMMA);
				this.state = 110;
				(localctx as DateConstructorxContext)._day = this.number_(0);
				this.state = 111;
				this.match(ConditionsParser.RPAREN);
				}
				break;
			case 4:
			case 5:
				localctx = new DateIteratorxContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 113;
				this.iterator();
				}
				break;
			case 34:
				localctx = new DateIdentifierxContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 114;
				this.identifier(0);
				}
				break;
			case 33:
				localctx = new DateTextxContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 115;
				this.match(ConditionsParser.TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public string_(): StringContext {
		let localctx: StringContext = new StringContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, ConditionsParser.RULE_string);
		try {
			this.state = 122;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 4:
			case 5:
				localctx = new IteratorStringxContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 118;
				this.iterator();
				}
				break;
			case 33:
				localctx = new TextStringxContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 119;
				this.match(ConditionsParser.TEXT);
				}
				break;
			case 34:
				localctx = new IdentifierStringxContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 120;
				this.identifier(0);
				}
				break;
			case 32:
				localctx = new UnfinishedStringxContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 121;
				this.match(ConditionsParser.UNFINISHED_STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public equatable(): EquatableContext {
		let localctx: EquatableContext = new EquatableContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, ConditionsParser.RULE_equatable);
		try {
			this.state = 126;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 9:
			case 10:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 124;
				this.bool();
				}
				break;
			case 1:
			case 4:
			case 5:
			case 15:
			case 22:
			case 31:
			case 32:
			case 33:
			case 34:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 125;
				this.comparable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public equality(): EqualityContext {
		let localctx: EqualityContext = new EqualityContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, ConditionsParser.RULE_equality);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 128;
			_la = this._input.LA(1);
			if(!(_la===20 || _la===21)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binary(): BinaryContext {
		let localctx: BinaryContext = new BinaryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, ConditionsParser.RULE_binary);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 130;
			_la = this._input.LA(1);
			if(!(_la===6 || _la===7)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comparable(): ComparableContext {
		let localctx: ComparableContext = new ComparableContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, ConditionsParser.RULE_comparable);
		try {
			this.state = 138;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 132;
				this.iterator();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 133;
				this.number_(0);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 134;
				this.date();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 135;
				this.identifier(0);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 136;
				this.match(ConditionsParser.TEXT);
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 137;
				this.match(ConditionsParser.UNFINISHED_STRING);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public iterator(): IteratorContext {
		let localctx: IteratorContext = new IteratorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, ConditionsParser.RULE_iterator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 140;
			_la = this._input.LA(1);
			if(!(_la===4 || _la===5)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 141;
			this.match(ConditionsParser.OF);
			this.state = 144;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				{
				this.state = 142;
				this.array();
				}
				break;
			case 34:
				{
				this.state = 143;
				this.identifier(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comparator(): ComparatorContext {
		let localctx: ComparatorContext = new ComparatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, ConditionsParser.RULE_comparator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 146;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 983040) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public array(): ArrayContext {
		let localctx: ArrayContext = new ArrayContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, ConditionsParser.RULE_array);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			this.match(ConditionsParser.LARRAYPAREN);
			this.state = 150;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 15)) & ~0x1F) === 0 && ((1 << (_la - 15)) & 851969) !== 0)) {
				{
				this.state = 149;
				this.arrayelements();
				}
			}
